compiler/testData/diagnostics/tests/subtyping/topLevelAnonymousObjects.kt
private var x = object {}

fun test() {
    x = <!TYPE_MISMATCH!>object<!> {}
}